<resources>
    <string name="app_name">UCVSesion7Trabajos</string>
    <string name="appTitulo">Administracion de Hospital Cayetano Heredia</string>
    <string name="registrar_medico">Registrar Medico</string>
    <string name="registrar_paciente">Registrar Paciente</string>
    <string name="agendar_cita">Agendar Cita</string>
    <string name="listar_citas">Listar Citas</string>
    <string name="registrar">Registrar</string>
    <string name="telefono">Telefono</string>
    <string name="correo">Correo</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="especialidad">Especialidad</string>
    <string name="direccion">Direccion</string>
    <string name="registre_su_consulta">Registre su consulta</string>
    <string name="digite_el_precio">Digite el precio</string>

    <string name="seleccione_el_medico_a_tratar">Seleccione el Medico a Tratar</string>
    <string name="registrar_cita">Registrar Cita</string>
    <string name="seleccionel_paciente">Seleccione el Paciente</string>
    <string name="lista_de_citas_realizadas">Lista de Citas Realizadas</string>
    <string name="medico">Medico:</string>
    <string name="paciente">Paciente:</string>
    <string name="consulta">Consulta:</string>
    <string name="precio">Precio:</string>
</resources>