<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/appTitulo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegMedico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ripple_buttons"
        android:text="@string/registrar_medico"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo" />

    <Button
        android:id="@+id/btnRegPaciente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/ripple_buttons"
        android:text="@string/registrar_paciente"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@id/btnRegMedico"
        app:layout_constraintStart_toStartOf="@id/btnRegMedico"
        app:layout_constraintTop_toBottomOf="@id/btnRegMedico" />

    <Button
        android:id="@+id/btnRegCita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/ripple_buttons"
        android:text="@string/agendar_cita"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@id/btnRegPaciente"
        app:layout_constraintStart_toStartOf="@id/btnRegPaciente"
        app:layout_constraintTop_toBottomOf="@id/btnRegPaciente" />

    <Button
        android:id="@+id/btnListCita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/ripple_buttons"
        android:text="@string/listar_citas"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@id/btnRegCita"
        app:layout_constraintStart_toStartOf="@id/btnRegCita"
        app:layout_constraintTop_toBottomOf="@id/btnRegCita" />


</androidx.constraintlayout.widget.ConstraintLayout>