<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegPaciente">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="Registrar Paciente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputNombrePa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <EditText
        android:id="@+id/inputApellidoPa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/apellido"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/inputNombrePa"
        app:layout_constraintStart_toStartOf="@id/inputNombrePa"
        app:layout_constraintTop_toBottomOf="@id/inputNombrePa" />

    <EditText
        android:id="@+id/inputDireccionPa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/direccion"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/inputApellidoPa"
        app:layout_constraintStart_toStartOf="@id/inputApellidoPa"
        app:layout_constraintTop_toBottomOf="@id/inputApellidoPa" />

    <EditText
        android:id="@+id/inputCorreoPa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/correo"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/inputDireccionPa"
        app:layout_constraintStart_toStartOf="@id/inputDireccionPa"
        app:layout_constraintTop_toBottomOf="@id/inputDireccionPa" />


    <EditText
        android:id="@+id/inputTelefonoPa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/telefono"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@id/inputCorreoPa"
        app:layout_constraintStart_toStartOf="@id/inputCorreoPa"
        app:layout_constraintTop_toBottomOf="@id/inputCorreoPa" />

    <Button
        android:id="@+id/btnRegistrarPaciente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/ripple_buttons"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="@id/inputTelefonoPa"
        app:layout_constraintStart_toStartOf="@id/inputTelefonoPa"
        app:layout_constraintTop_toBottomOf="@id/inputTelefonoPa" />

    <Button
        android:id="@+id/btnlistarPa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/ripple_buttons"
        android:text="Listar Momentaneo"
        app:layout_constraintEnd_toEndOf="@id/btnRegistrarPaciente"
        app:layout_constraintStart_toStartOf="@id/btnRegistrarPaciente"
        app:layout_constraintTop_toBottomOf="@id/btnRegistrarPaciente" />
</androidx.constraintlayout.widget.ConstraintLayout>