<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/myCardViewRutas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_citas"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/medico"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNombreMedico"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@id/tv1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv1"
                app:layout_constraintTop_toTopOf="@id/tv1" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/paciente"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv1"
                app:layout_constraintTop_toBottomOf="@id/tv1" />

            <TextView
                android:id="@+id/tvNombrePaciente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="@id/tv2"
                app:layout_constraintEnd_toEndOf="@id/tvNombreMedico"
                app:layout_constraintStart_toEndOf="@id/tv2"
                app:layout_constraintTop_toTopOf="@id/tv2" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consulta"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tvConsulta"
                app:layout_constraintStart_toStartOf="@id/tv2"
                app:layout_constraintTop_toTopOf="@id/tvConsulta" />

            <TextView
                android:id="@+id/tvConsulta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@id/tvNombrePaciente"
                app:layout_constraintStart_toEndOf="@id/tv3"
                app:layout_constraintTop_toBottomOf="@id/tvNombrePaciente" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/precio"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv3"
                app:layout_constraintTop_toBottomOf="@id/tv3" />

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/tv4"
                app:layout_constraintEnd_toEndOf="@id/tvConsulta"
                app:layout_constraintStart_toStartOf="@+id/tvConsulta"
                app:layout_constraintTop_toTopOf="@id/tv4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>